# palette-ranking

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
public/demo/: index.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  folder.rs  main.rs  models.rs  palette_probe.rs  state.rs  system.rs  thumbnail.rs
src-tauri/src/color_analysis/: create_palette.rs  extract_colors.rs  mod.rs
src/assets/fonts/: font_usage.txt
src/components/: WelcomeScreen.tsx
src/components/image/: ImageCard.tsx  ImageGrid.tsx  ImageView.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/scan/: BootState.tsx  FolderStatusView.tsx  ScanningState.tsx
src/components/ui/: ConfirmationModal.tsx  FilterBar.tsx  FolderTabs.tsx  GridControls.tsx  Logo.tsx  Slider.tsx  ThemeToggle.tsx  TopbarButton.tsx
src/constants/: layout.ts
src/context/: FolderContext.tsx
src/hooks/: useFolderScanning.ts  useImageOrganization.ts  useImages.ts  useSession.ts  useSorting.ts  useStoredState.ts
src/lib/: bridge.ts  demo.ts  folderHelpers.ts  imageTags.ts  platform.ts  tauri.ts
src/pages/: HomePage.tsx
src/types/: common.ts  folder.ts  image.ts  index.ts  ui.ts
