[package]
name = "palette-ranking"
version = "1.0.0"
description = "Tauri desktop app for browsing image folders, analyzing color palettes, and filtering images by color."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon="1.10"
palette = { version = "0.7", features = ["std"] }
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "webp", "webp-encoder"] }
rand = { version = "0.8", features = ["std", "small_rng"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[features]
default = []
avif = ["image/avif"]
